tests/testsuite/snapshots/testsuite__repl__case_2_bool_true.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: "true"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[3mLiteral(
    Literal {
        kind: True,
        token: Token {
            kind: True,
            loc: <input>:0..4,
        },
    },
)[0m
[38;2;170;034;255m[1m=> true[0m
[0mλ» [1m[0m
----- stderr -----
